# CarEye-VirtualTerminal-Demo

./: .gitignore  configure.ini
Demo/: Demo.sln
JT808Controller/: AutoIncressContent.cpp  AutoIncressContent.h  BlockingRingBuffer.h  BlokingRingBuffer.cpp  CMakeLists.txt  CommandClasses.cpp  CommandClasses.h  JT808Controller.cpp  JT808Controller.h  JT808Controller.vcxproj  JT808Controller.vcxproj.filters  JT808VirutalTerminal.h  JTT808Head.cpp  JTT808Head.h  JTT808Packer.cpp  JTT808Packer.h  RTPPusher.cpp  RTPPusher.h  Semaphore.cpp  Semaphore.h  cmddeclare.h  dllmain.cpp  stdafx.h  targetver.h  utils.cpp  utils.h
JT808Controller/HPSocket/: HPSocket-SSL.h  HPSocket.h  HPSocket4C-SSL.h  HPSocket4C.h  HPTypeDef.h  SocketInterface.h
JT808Controller/HPSocket/windows/: HPSocket.h
VirtualTerminal/: VirtualTerminal.cpp  VirtualTerminal.vcxproj  VirtualTerminal.vcxproj.filters  dictionary.cpp  dictionary.h  iniparser.cpp
